--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,6 @@
 {
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
   "hosting": {
-    "public": "build/web",
+    "public": "web/build",
     "ignore": [
       "firebase.json",
       "**/.*",
